CHANGES.txt for wxPython

----------------------------------------------------------------------

2.3.3
-----
Added wxSplashScreen.

Added wxGenericDirCtrl.

Added wxMultiChoiceDialog.



2.3.2.1
-------
Changed (again) how the Python global interpreter lock is handled as
well as the Python thread state.  This time it works on SMP machines
without barfing and is also still compatible with Python debuggers.

Added some patches from library contributors.




2.3.2
-----
Added EVT_HELP, EVT_HELP_RANGE, EVT_DETAILED_HELP,
EVT_DETAILED_HELP_RANGE, EVT_CONTEXT_MENU, wxHelpEvent,
wxContextMenuEvent, wxContextHelp, wxContextHelpButton, wxTipWindow,
and a demo to show them in action.

Deprecated PyShell and PyShellWindow, added a snapshot of PyCrust (see
http://sourceforge.net/projects/pycrust/. )

Added the new virtual list capabilities to wxListCtrl.

Added a wxSTC style editor from Riaan Booysen to the sample apps.

Added XRCed to the wxPython Tools directory, contributed by Roman
Rolinsky.

Added a new "constructor" to most of the window classes that calls the
default C++ contructor, (the one with no parameters) and also added the
coresponding Create(...) method.  This allows you to do a 2-step
creation of windows which is sometimes required for doing things such
as setting extended style flags before the window is created, or for
passing the object to the XRC resource system to be created from the
resource.  The name of the new "constructor" is the original name of
the class with a "Pre" in it.  For example, wxPreWindow, wxPreFrame,
etc.

Updated to version 1.40 of Scintilla and updated wxStyledTextCtrl
accordingly.  While doing this update I dropped the wxLB_SORT style
from the wxListBox created for the AutoComplete functionality.  This
means that you will have to sort the keyword lists yourself, but you
are free to do case sensitive or case insensitive sorts and set the
wxSTC flag accordingly.

Updated wxColumnSorterMixin to also be able to place sort icons on the